<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/progress_bar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:elevation="10dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/failed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/rajdhani600"
            android:text="@string/text_alert_no_image"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/rajdhani600"
            android:text="@string/text_image_req"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/dialog_try_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/brown"
            android:text="@string/text_try_again_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>