<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.scan.ScanActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progress_bar"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryVariant"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_back"
            android:padding="8dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/rajdhani700"
            android:text="@string/text_scanner_toolbar"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/text_size_toolbar"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="30dp" />

        <ImageView
            android:id="@+id/preview_image_view"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/cd_soil_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_top_margin"
            tools:ignore="MissingConstraints" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/image_loading"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/preview_image_view"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_images"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_after"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/preview_image_view">

            <TextView
                android:id="@+id/title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/text_soil_type_title"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/barrier1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="?attr/colorPrimary"
                android:backgroundTint="?attr/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/title1" />

            <TextView
                android:id="@+id/soil_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/text_soil_placeholder"
                android:textAlignment="center"
                android:textColor="@color/brown"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/barrier1" />

            <Button
                android:id="@+id/crop_button"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/cd_plant_button"
                android:elevation="2dp"
                android:fontFamily="@font/rajdhani700"
                android:scaleType="fitCenter"
                android:text="@string/cd_plant_button"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/soil_type" />

            <!--            <Button-->
            <!--                android:id="@+id/treatButton"-->
            <!--                android:layout_width="150dp"-->
            <!--                android:layout_height="64dp"-->
            <!--                android:layout_marginStart="16dp"-->
            <!--                android:layout_marginTop="10dp"-->
            <!--                android:contentDescription="@string/gallery_button"-->
            <!--                android:fontFamily="@font/rajdhani700"-->
            <!--                android:text="@string/treat_button"-->
            <!--                android:textAllCaps="false"-->
            <!--                android:textSize="20sp"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/soilType" />-->

            <Button
                android:id="@+id/scan_again_button"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/cd_detect_button"
                android:fontFamily="@font/rajdhani700"
                android:text="@string/scan_again_button"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crop_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_before"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/preview_image_view">

            <Button
                android:id="@+id/camera_button"
                android:layout_width="150dp"
                android:layout_height="64dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/cd_camera_button"
                android:elevation="2dp"
                android:fontFamily="@font/rajdhani700"
                android:scaleType="fitCenter"
                android:text="@string/cd_camera_button"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/gallery_button"
                android:layout_width="150dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/cd_gallery_button"
                android:fontFamily="@font/rajdhani700"
                android:text="@string/cd_gallery_button"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/detect_button"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/cd_detect_button"
                android:fontFamily="@font/rajdhani700"
                android:text="@string/cd_detect_button"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/camera_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>